--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.16.2",
+    "react-bootstrap": "^0.31.5",
     "redux": "^3.7.2"
   }
 }
