--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.16.2",
+    "prop-types": "^15.6.0",
     "react-bootstrap": "^0.31.5",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.7.2"
   }
 }
