--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "devDependencies": {
+    "nodemon": "^1.12.1",
     "redux-logger": "^3.0.6",
     "webpack": "^3.8.1"
   },
@@ -21,6 +22,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.12.6",
     "morgan": "~1.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
