--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
@@ -31,6 +32,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.3.2"
   }
 }
