--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www | node apiServer.js"
   },
   "devDependencies": {
     "nodemon": "^1.12.1",
@@ -22,6 +22,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "http-proxy": "^1.16.2",
     "jade": "~1.11.0",
     "mongoose": "^4.12.6",
     "morgan": "~1.7.0",
