--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "~1.16.0",
+    "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-session": "^1.15.6",
     "http-proxy": "^1.16.2",
     "jade": "~1.11.0",
     "mongoose": "^4.12.6",
