--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "ejs": "^2.5.7",
     "express": "~4.14.1",
     "express-session": "^1.15.6",
     "http-proxy": "^1.16.2",
